cmake_minimum_required(VERSION 3.16)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp Student.cpp Student.h Person.cpp Person.h Study.cpp Study.h Object.cpp Object.h Base1.cpp Base1.h BaseActivity.cpp BaseActivity.h MainActivity.cpp MainActivity.h ILoginResponse.cpp ILoginResponse.h ComparedObject.h ComparedObject.cpp Ptr.h Ptr.cpp )